@@ -1,2 +1,1 @@
 - highlights with menu for turning on/off
-- save position of the divider
