@@ -88,6 +88,7 @@ loadpreferences (void)
   preferences.dxfont = g_strdup ("Sans 10");
   preferences.allfont = g_strdup ("Sans 10");
   preferences.localecho = 1;
+  preferences.handlebarpos = 350;
 
   /* open preferences file */
   preferencesfile = g_strdup_printf ("%s/preferences", gui->preferencesdir);
@@ -165,6 +166,8 @@ loadpreferences (void)
         }
         else if (!g_ascii_strcasecmp(label, "localecho")) 
           preferences.localecho = atoi(value);
+        else if (!g_ascii_strcasecmp(label, "handlebarpos")) 
+          preferences.handlebarpos = atoi(value);
       }
     fclose (fp);
   }
@@ -243,6 +246,8 @@ savepreferences (void)
     fprintf(fp, "allfont %s\n", str);
     str = g_strdup_printf("%d", preferences.localecho);
     fprintf(fp, "localecho %s\n", str);
+    str = g_strdup_printf("%d", preferences.handlebarpos);
+    fprintf(fp, "handlebarpos %s\n", str);
     g_free(str);
     fclose (fp);
   }
